--- a/vita.pug
+++ b/vita.pug
@@ -28,30 +28,31 @@ html(lang="en")
                     article.title
                         h2 placetobe
                         h3 galerie hausgeburt | Stuttgart
-                    ul.artists.hidden
+                    ul.artists.hidden-content.hidden
                         li Eva Dittrich
                         li Fabian w. Penzkofer
                         li Jasmin Schädler
                         li Ivan Syrov
                         li Helen Weber
-                    .gallery.hidden
-                        img(src="https://picsum.photos/250/200/?random")
-                        img(src="https://picsum.photos/140/280/?random")
-                        img(src="https://picsum.photos/240/280/?random")
+                    .gallery.hidden-content.hidden
+                            img(src="https://picsum.photos/200/200/?random")
+                            img(src="https://picsum.photos/300/200/?random")
+                            img(src="https://picsum.photos/500/300/?random")
+                            
                 .content.vita-content
                     h4 15.09 - 07.10.2018
                     article.title
                         h2 schatten im licht
                         h3 Cafe De Ville, Schorndorf
-                    ul.artists.vita-artists
+                    ul.artists.hidden-content.hidden
                         li Eva Dittrich
                         li Fabian w. Penzkofer
                         li Jasmin Schädler
                         li Ivan Syrov
                         li Helen Weber
-                    .gallery
-                        img(src="https://picsum.photos/200/200/?random")
-                        img(src="https://picsum.photos/300/200/?random")
-                        img(src="https://picsum.photos/500/300/?random")
+                    .gallery.hidden-content.hidden
+                            img(src="https://picsum.photos/200/200/?random")
+                            img(src="https://picsum.photos/300/200/?random")
+                            img(src="https://picsum.photos/500/300/?random")
                         
         script(src='js/script.js')
