--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,8 @@ section {
   pointer-events: auto;
   content: "i";
   text-transform: lowercase;
-  font-family: serif;
+  font-family: 'Georgia', serif;
+  font-size: 16px;
   cursor: pointer; }
 
 #jetzt h4 {
@@ -133,7 +134,7 @@ section {
 
 .text {
   margin-left: 2%;
-  margin-top: 24px;
+  margin-top: 12px;
   max-width: 960px; }
   .text p {
     border-left: 1px solid lightgrey;
@@ -176,7 +177,11 @@ section {
       margin-left: 16px;
       pointer-events: auto;
       content: ">";
-      cursor: pointer; }
+      width: 18px;
+      height: 18px;
+      line-height: 16px;
+      cursor: pointer;
+      vertical-align: middle; }
 
 .vita-content h2 {
   pointer-events: none;
@@ -240,8 +245,6 @@ section {
     grid-template-columns: 155px 1fr; }
   .title {
     grid-column: 1 / 3; }
-  .artists {
-    grid-column: 1; }
   .text {
     grid-column: 2; }
   .add {
@@ -250,13 +253,10 @@ section {
     grid-template-columns: 250px 1fr;
     grid-template-rows: -webkit-max-content 1fr;
     grid-template-rows: max-content 1fr; }
+    .vita-content .title {
+      grid-column: 2; }
     .vita-content h4 {
       grid-row: 1;
-      grid-column: 1; }
-    .vita-content .title {
-      grid-column: 2 / 4;
-      grid-row: 1 / 4; }
-    .vita-content .artists {
       grid-column: 1; } }
 
 @media screen and (min-width: 1366px) {
