--- a/sass/style.sass
+++ b/sass/style.sass
@@ -139,7 +139,8 @@ section
             +circle
             content: "i"
             text-transform: lowercase
-            font-family: serif
+            font-family: 'Georgia', serif
+            font-size: 16px
             cursor: pointer
     h4
         margin-bottom: $baseline / 4
@@ -147,8 +148,6 @@ section
 .content
     margin-bottom: $baseline*2
     max-width: 960px
-
-.title 
 
 .tooltip
     margin-top: $baseline / 2
@@ -167,7 +166,7 @@ section
 
 .text
     margin-left: 2%
-    margin-top: $baseline
+    margin-top: $baseline / 2
     max-width: 960px
     p
         border-left: 1px solid lightgrey
@@ -198,7 +197,11 @@ section
         &::after
             +circle
             content: ">"
+            width: 18px
+            height: 18px
+            line-height: 16px
             cursor: pointer
+            vertical-align: middle
     margin-bottom: $baseline*2
 
 .vita-content
@@ -210,7 +213,8 @@ section
         &::after
             +circle
             content: "+"
-    .artists
+    .hidden-content
+
 
 .gallery
     margin-top: $baseline
@@ -257,8 +261,6 @@ section
         grid-template-columns: 155px 1fr
     .title
         grid-column: 1 / 3
-    .artists
-        grid-column: 1
     .text
         grid-column: 2
     .add
@@ -267,17 +269,12 @@ section
     .vita-content
         grid-template-columns: 250px 1fr
         grid-template-rows: max-content 1fr
+        .title
+            grid-column: 2
         h4
             grid-row: 1
             grid-column: 1
-        .title
-            grid-column: 2 / 4
-            grid-row: 1 / 4
-        .artists
-            //margin-top: -$baseline / 2
-            grid-column: 1
-            //background: red
-        
+            
 @media screen and (min-width: 1366px)
     .grid
         grid-template-columns: 1fr 280px 2fr 2fr 2fr
