all kinds of stuff

--- a/includes/nav.pug
+++ b/includes/nav.pug
@@ -6,20 +6,22 @@
             li
                 a(href="index.html") Jetzt
             li 
-                a(href="index.html") Werke
-                    ul.werke.hidden
-                        li
-                            a(href="index.html") Feed II
-                        li
-                            a(href="index.html") Feed I
-                        li
-                            a(href="index.html") Schwarz
-                        li
-                            a(href="index.html") Mathe
-                        li 
-                            a(href="index.html") Orte und Tretmühlen
+                a(href="werke.html") Werke
+            ul.werke
+                li
+                    a(href="werke.html") Feed II
+                li
+                    a(href="feed-1.html") Feed I
+                li
+                    a(href="schwarz.html") Schwarz
+                li
+                    a(href="mathe.html") Mathe
+                li 
+                    a(href="orte-tret.html") Orte und Tretmühlen
             li
                 a(href="vita.html") Vita
-            li
-                a(href="index.html") Impressum
+            li.kontakt
+                a(href="impressum.html") Kontakt/<br>Impressum
+
+        
                     
