--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,17 @@ a {
   color: black;
   display: inline-block; }
 
+img {
+  max-width: 100%; }
+
+.mail {
+  font-weight: 600;
+  font-size: 14px;
+  color: white;
+  border: 1px solid;
+  padding: 1px 6px;
+  background: black; }
+
 section {
   margin-left: 2%;
   margin-right: 2%; }
@@ -47,7 +58,7 @@ section {
   top: 0;
   width: 100%;
   background: rgba(255, 255, 255, 0.9);
-  z-index: 1;
+  z-index: 5;
   padding-left: 2%;
   padding-right: 2%;
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -71,24 +82,32 @@ nav {
       margin-bottom: 12px; }
 
 .werke {
+  max-width: 480px;
   font-size: 14px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   position: absolute;
-  padding-left: 8px;
-  padding-right: 8px;
-  margin-top: 12px;
+  margin-top: 44px;
+  padding-top: 16px;
   background: rgba(255, 255, 255, 0.9);
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap; }
   .werke li {
+    margin-right: 16px;
     margin-bottom: 12px;
-    line-height: 12px; }
+    line-height: 12px;
+    text-align: center; }
+
+.kontakt {
+  font-size: 14px;
+  line-height: 1;
+  font-weight: 600; }
+  .kontakt a {
+    color: grey; }
 
 section {
   margin-top: 144px; }
@@ -154,6 +173,16 @@ section {
 .add-dates {
   margin-right: 5%;
   font-weight: 600; }
+
+.art {
+  margin-bottom: 48px; }
+
+.art-desc li:first-child {
+  text-transform: uppercase;
+  font-weight: 600; }
+
+.art-desc li {
+  line-height: 1.2; }
 
 #vita .fabi {
   width: 50%;
@@ -224,9 +253,8 @@ section {
     margin-top: 72px;
     display: block; }
   .logo {
-    margin-top: 24px;
-    margin-bottom: 24px;
-    position: fixed; }
+    position: fixed;
+    width: 180px; }
   nav {
     position: fixed;
     display: inline-block;
@@ -237,7 +265,16 @@ section {
     position: static;
     background: none;
     -webkit-box-shadow: none;
-    box-shadow: none; }
+    box-shadow: none;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    margin-left: 8px;
+    margin-top: 0;
+    padding: 0; }
+    .werke li {
+      text-align: left; }
   section {
     grid-column: 3 / 5; }
   .content {
