--- a/index.pug
+++ b/index.pug
@@ -18,11 +18,11 @@ html(lang="en")
                         li
                             a(href="index.html") <strong>Jetzt</strong>
                         li 
-                            a(href="werke.html") Werke
+                            a(href="feed-1.html") Werke
                         li
                             a(href="vita.html") Vita
                         li.kontakt
-                            a(href="impressum.html") Kontakt/<br>Impressum
+                            a(href="impressum.html") Kontakt <br>Datenschutz<br>Impressum
 
                     
 
@@ -31,8 +31,8 @@ html(lang="en")
                 .content.jetzt-content
                     article.title
                         h4 28.09. - 20.10.2018
-                        h2 Hi Definition
-                           include includes/circle.pug
+                        h2 [Hai: defiˈniʃən]
+                        include includes/circle.pug
                         .tooltip.hidden
                             p Vorstadtstraße 61-67
                             p 73614 Schorndorf
@@ -52,15 +52,37 @@ html(lang="en")
                             li Kaffee & Suchen
                             li Performance & Finissage
                         ul.add-dates-time
-                            li 28.09 | 20:00
-                            li 30.09 | 15:00
-                            li 20.10 | 20.30
+                            li 28.09 | 19:00
+                            li 30.09 | 14:00
+                            li 20.10 | 19.00
+
+                .content.jetzt-content
+                    article.title
+                        h4 13.10. - 10.11.2018
+                        h2 Alle müssen es gesehen haben
+                        include includes/circle.pug
+                        .tooltip.hidden
+                            p Innerer Nordbahnhof 3
+                            p 70191 Stuttgart
+                        h3 Galerie Hausgeburt
+                    ul.artists
+                        li Clarissa Kassai
+                        li Fabian W. Penzkofer
+                    article.text
+                        p Beeindruckt von der Form, stülpt diese sich über beinahe jede mögliche weitere Wahrnehmung anderer Realität. Sekunden reichen und verzerren ein Bild in ihrer Kürze noch weiter. Was tun, wenn Schönheit plötzlich an einer hinzugestoßenen Wahrheit zu zerschellen droht? Ein Verhältnis zwischen Bewohner und Betrachter offengelegt, fragt welchen Teil wollen wir uns nehmen
+                    article.add
+                        ul.add-dates
+                            li Vernissage
+                            li Finissage
+                        ul.add-dates-time
+                            li 13.10 | 20:00
+                            li 10.11 | 20:00
 
                 .content.jetzt-content
                     article.title
                         h4 15.09. - 07.10.2018
                         h2 Die Drei Freunde
-                            include includes/circle.pug
+                        include includes/circle.pug
                         .tooltip.hidden
                             p Hammerschlag 8
                             p 73614 Schorndorf
@@ -70,13 +92,7 @@ html(lang="en")
                         li Friedrich Hensen
                     article.text
                         p 3 in Schorndorf und drum herum aufgewachsene, 3, die ihre ersten künstlerischen Schritte auch dort getätigt haben. Diese 3 wollen nun sich und ihr tun mit Schorndorf zu teilen. Für alle 3 spielt Lyrik eine bedeutende Rolle in ihrem Schaffen, sowie Performance und das Arbeiten im öffentlichen Raum. Gehen wir von performativem aus, von musikalischem, malerischem, fotografischem und skulpturalem. Gehen wir davon aus, dass in der gemeinsamen Ausarbeitung eines Konzepts manches wieder verschwindet und manch anderes dafür hinzustößt und schon vervollständigt sich die Beschreibung eines gemeinsamen Projekts.
-                    article.add
-                        ul.add-dates
-                            li Vernissage
-                            li Kaffee & Suchen
-                            li Performance & Finissage
-                        ul.add-dates-time
-                            li 28.09 | 20:00
-                            li 30.09 | 15:00
-                            li 20.10 | 20.30
+
+                
+
         script(src='js/script.js')
