--- a/vita.pug
+++ b/vita.pug
@@ -18,56 +18,147 @@ html(lang="en")
                         li
                             a(href="index.html") Jetzt
                         li 
-                            a(href="werke.html") Werke
+                            a(href="feed-1.html") Werke
                         li
                             a(href="vita.html") <strong>Vita</strong>
                         li.kontakt
-                            a(href="impressum.html") Kontakt/<br>Impressum
-
+                            a(href="impressum.html") Kontakt <br>Datenschutz<br>Impressum
                         
 
             section#vita
                 img.fabi(src="pics/fabi.jpg")
                 ul.cv
-                    li Staatliche akademie der bildenden künste Stuttgart
-                    li Klasse Professor reto boller
-                    li klasse professor andreas opiolka A.m. cindy cordt
-                    li Miterfinder von ROSANNAWIDUKIND
-                    li Mitbegründer von Bohnemann und Smartbeats
-                    li Teil von Tristan Reverb
+                    
+                    li 
+                        a(href="http://www.abk-stuttgart.de/" target="_blank") Staatliche akademie der bildenden künste Stuttgart
+                    li Klasse Professor 
+                        a(href="http://www.retoboller.com" target="_blank") reto boller
+                    li klasse professor 
+                        a(href="http://www.andreasopiolka.de/" target="_blank") andreas opiolka </a> A.m. cindy cordt
+                    li Miterfinder von 
+                        a(href="rosanna.html") ROSANNAWIDUKIND
+                    li Mitbegründer von 
+                        a(href="https://www.youtube.com/watch?v=sQmdjocL0J4" target="_blank") Bohnemann und Smartbeats
+                    li Teil von 
+                        a(href="https://www.tristanreverb.com/") Tristan Reverb
 
                 .content.vita-content
-                    h4 15.09 - 07.10.2018
+                    h4 23.06 - 22.07.2018
+                    article.title
+                        h2 Kurze Szenen | Heile Welt
+                        include includes/circle.pug
+                        h3 Neuer Kunstverein Regensburg
+                    ul.artists.hidden-content.hidden
+                        li Büro für verschiebbare Haltungen
+                        li Gast: Fabian W. Penzkofer
+                    .gallery.hidden-content.hidden
+                            img(src="pics/vita/heilewelt/IMG_5275.jpg")
+
+                .content.vita-content
+                    h4 11.05 - 13.05.2018
+                    article.title
+                        h2.font-small about:blank
+                        include includes/circle.pug
+                        h3 LAF | Pforzheim
+                    ul.artists.hidden-content.hidden
+                        li Garance Arcandias
+                        li Julian Bogenfeld
+                        li Lennard Cleeman
+                        li Friedrich Hensen
+                        li Theo Dietz
+                        li Janis Eckardt
+                        li Moritz Finkbeiner
+                        li Jan Hottmann
+                        li Rebecca Ogle
+                        li Caroline D'Orville
+                        li Ivan Syrov
+                        li Fabian W. Penzkofer
+                        li Jasmin Schädler
+                        li Tzusoo
+                        li Helen Weber
+                    .gallery.hidden-content.hidden
+                            img(src="pics/schwarz/01.jpg")
+                            img(src="pics/schwarz/02.jpg")
+                            img(src="pics/schwarz/03.jpg")
+                            img(src="pics/schwarz/04.jpg")
+
+                .content.vita-content
+                    h4 14.04.2018
+                    article.title
+                        h2 Innenhoftherapie
+                        include includes/circle.pug
+                        h3 Forum 3 | Stuttgart
+                    ul.artists.hidden-content.hidden
+                        li Theo Dietz
+                        li Theresa Dorn
+                        li Wera Gmeiner
+                        li Friedrich Hensen
+                        li Jan Hottmann
+                        li Miriam Krämer
+                        li Christoph Kuttner
+                        li Maria Leisner
+                        li Maximilian Lutz
+                        li Theresa Müller
+                        li Ivan Syrov
+                        li ROSANNAWIDUKIND
+                    .gallery.hidden-content.hidden
+                            img(src="pics/vita/rosanna/ROSAgroß.jpg")
+                            img(src="pics/vita/rosanna/rosannawidukindimwind.jpg")
+
+                .content.vita-content
+                    h4 18.02 - 01.04.2017
                     article.title
                         h2 placetobe
-                            include includes/circle.pug
+                        include includes/circle.pug
                         h3 galerie hausgeburt | Stuttgart
                     ul.artists.hidden-content.hidden
-                        li Eva Dittrich
-                        li Fabian w. Penzkofer
-                        li Jasmin Schädler
-                        li Ivan Syrov
-                        li Helen Weber
+                        li Friedrich Hensen
+                        li Tobias Hensen
+                        li Fabian W. Penzkofer
                     .gallery.hidden-content.hidden
-                            img(src="https://picsum.photos/200/200/?random")
-                            img(src="https://picsum.photos/300/200/?random")
-                            img(src="https://picsum.photos/500/300/?random")
+                            img(src="pics/orte/OUTdoku1.jpg")
+                            img(src="pics/orte/OUTdoku2.jpg")
+                            img(src="pics/orte/OUTdoku3.jpg")
                             
                 .content.vita-content
-                    h4 15.09 - 07.10.2018
+                    h4 19.09 - 30.10.2015
                     article.title
                         h2 schatten im licht
-                            include includes/circle.pug
-                        h3 Cafe De Ville, Schorndorf
+                        include includes/circle.pug
+                        h3 Cafe De Ville | Schorndorf
                     ul.artists.hidden-content.hidden
-                        li Eva Dittrich
-                        li Fabian w. Penzkofer
-                        li Jasmin Schädler
-                        li Ivan Syrov
-                        li Helen Weber
+                        li Fabian W. Penzkofer
+
+                .content.vita-content
+                    h4 12.06 - 13.06.2015
+                    article.title
+                        h2 Snag Festival
+                        include includes/circle.pug
+                        h3 Villa Merkel | Esslingen
+                    ul.artists.hidden-content.hidden
+                        li Sebastian Schaal
+                        li Marius Alsleben
+                        li Fabian W. Penzkofer
                     .gallery.hidden-content.hidden
-                            img(src="https://picsum.photos/200/200/?random")
-                            img(src="https://picsum.photos/300/200/?random")
-                            img(src="https://picsum.photos/500/300/?random")
+                            img(src="pics/vita/snag/snag_01.jpg")
+                            img(src="pics/vita/snag/snag_02.jpg")
+                            img(src="pics/vita/snag/snag_03.jpg")
+
+                .content.vita-content
+                    h4 07.03.2015
+                    article.title
+                        h2 E41
+                        include includes/circle.pug
+                        h3 E41 | Tübingen
+                    ul.artists.hidden-content.hidden
+                        li Helen Weber
+                        li Alexandru Salariu
+                        li Fabian W. Penzkofer
+
+                
+                
+
+                
+                
                         
         script(src='js/script.js')
