--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,6 +1,8 @@
 // IMPORTS
 
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,200,700')
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,200,700,800')
+
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display')
 
 @import reset
     
@@ -64,6 +66,11 @@ h4
     font-weight: 200
     +uppercase
 
+h5
+    font-size: $size-font-h4
+h6
+    font-size: $size-font-p
+
 a
     color: black
     display: inline-block
@@ -71,6 +78,7 @@ a
 
 img
     max-width: 100%
+    max-height: 900px
 
 .mail
     //text-transform: lowercase
@@ -127,19 +135,18 @@ nav
         
 
 .werke
-    max-width: 480px
+    //max-width: 480px
     font-size: 14px
     display: flex
     //flex-direction: column
     justify-content: space-between
     position: absolute
     //padding: 8px
-    margin-top: 44px
+    margin-top: 57px
     padding-top: 16px
     background: rgba(255,255,255,0.9)
     //box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)
     flex-wrap: wrap
-
 
 
     a
@@ -154,7 +161,8 @@ nav
 .kontakt
     font-size: 14px
     line-height: 1
-    font-weight: 600
+    font-weight: 400
+    //text-transform: none
     a
         color: grey
     
@@ -162,11 +170,18 @@ nav
 //MAIN
 
 section
-    margin-top: $baseline*6
+    margin-top: $baseline*8
 
 #jetzt
+    svg
+        //float: left
+        margin-left: 8px
+        display: inline
+        vertical-align: -10%
     h2
+        display: inline-block
         svg
+            //float: left
             margin-left: 8px
             //vertical-align: bottom
         //&::after
@@ -179,17 +194,17 @@ section
     h4
         margin-bottom: $baseline / 4
 
+
 .content
     margin-bottom: $baseline*2
     max-width: 960px
 
 .tooltip
-    margin-top: $baseline / 2
-    margin-bottom: $baseline / 2
-    //color: grey
-    display: inline-block
+    //margin-top: $baseline / 2
+    //margin-left: 16px
+    display: block
     padding: 8px
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)
+    //box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)
 
 
 .artists
@@ -229,6 +244,57 @@ section
     li
         line-height: 1.2
 
+.orte-tret
+    font-family: 'Playfair Display', serif
+    p
+        margin-bottom: $baseline
+
+audio
+    display: block
+    background: red
+
+.audioplayer
+    display: block
+    width: 100%
+    height: 0
+    //border: solid
+    background: red
+    display: inline-block
+    margin-bottom: $baseline*3
+
+.pButton
+    height: 60px
+    width: 50px
+    border: none
+    background-size: 50% 50%
+    background-repeat: no-repeat
+    background-position: center
+    float: left
+    outline: none
+
+
+.play
+    background: url('/icons/play.svg')
+.pause
+    background: url('/icons/pause.svg')
+
+.timeline
+    //display: none
+    width: 0
+    height: 0
+    margin-top: 20px
+    float: left
+    //border-radius: 15px
+    background: rgba(0,0,0,.3)
+
+.playhead
+    width: 10px
+    height: 10px
+    border-radius: 50%
+    margin-top: 5px
+    background: rgba(0, 0, 0,1)
+
+
 //VITA
 
 #vita
@@ -248,18 +314,28 @@ section
             cursor: pointer
             vertical-align: middle
     margin-bottom: $baseline*2
+    a
+        font-weight: 400
+        border-bottom: 1px solid
+        line-height: 1
+
 
 .vita-content
     h4
     .title
     h2
+        display: inline
         //pointer-events: none
         //cursor: pointer
         //&::after
             // +circle
             // content: "+"
-        svg
-            margin-left: 8px
+    svg
+        //float: left
+        margin-left: 8px
+        display: inline
+        vertical-align: -10%
+        width: 22px
     .hidden-content
 
 
@@ -273,6 +349,31 @@ section
 
 .hidden
     display: none
+
+.font-small
+    text-transform: lowercase
+
+video
+    width: 100%
+    grid-column: 1 / 4
+
+//IMPRESSUM
+.impressum-content
+    article
+        margin-top: $baseline*2
+        grid-column: 1 / 4
+        h5
+            font-size: 16px
+            margin-bottom: $baseline
+        h6
+            font-size: 16px
+        p
+            font-size: 14px
+            margin-bottom: $baseline
+.kontaktdaten
+    grid-column: 1 / 4
+    a
+        border-bottom: 1px solid
 
 @media screen and (min-width:960px)
 
@@ -310,6 +411,7 @@ section
             text-align: left
     section
         grid-column: 3 / 5
+        margin-top: $baseline*6
     .content
         display: grid
         grid-template-columns: 155px 1fr
@@ -328,6 +430,11 @@ section
         h4
             grid-row: 1
             grid-column: 1
+
+    .kontakt
+        margin-top: $baseline*1.3
+    
+
             
 @media screen and (min-width: 1366px)
     .grid
@@ -337,7 +444,9 @@ section
 
 
 
-    
+
+
+
 
 
 
